cluster/manifests/prometheus-adapter/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prometheus-adapter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-adapter
  mtls:
    mode: PERMISSIVE
