cluster/manifests/prometheus-adapter/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: prometheus-adapter
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: prometheus-adapter
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./mimir-proxy.mimir.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
